# graghRAG

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  REVIEW.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/skills/graphrag-frontend/: SKILL.md
.cursor/skills/graphrag-graph/: SKILL.md
.cursor/skills/graphrag-ingestion/: SKILL.md
.github/workflows/: tests.yml
api/: deps.py  errors.py  main.py  schemas.py  utils.py
api/controllers/: graph_controller.py  ingestion_controller.py  query_controller.py  settings_controller.py
api/routes/: graph_routes.py  ingestion_routes.py  query_routes.py  settings_routes.py
apps/: index.html  package-lock.json  package.json  vite.config.js
apps/src/: App.css  App.jsx  index.css
apps/src/i18n/: index.js
configs/: config.py
core/: document_loader.py  entity_normalization.py  graph_engine.py  graph_traversal.py  ingestion.py  lang_detect.py  lang_guard.py  query_cache.py  vector_store.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DESIGN_GRAPHRAG_RUNTIME_2026Q1.md  EMBEDDING_DEBUG_REPORT.md  INGESTION_PIPELINE.md  OPTIMIZATION_LLM_LATENCY.md  QUERY_PIPELINE.md  TESTING.md  user_manual_trilingual.md
pipelines/: context_builder.py  prompt_builder.py  query_pipeline.py  query_planner.py
scripts/: check_neo4j.py  restart_all.sh  start_api.sh  test_query.py
tests/: conftest.py  test_api.py  test_document_loader.py  test_engines.py  test_integration.py  test_multilingual_graph_query.py  test_query_pipeline_contract.py  test_utils.py
workers/: celery_worker.py
(+7 files in other folders)
